- added asserts and checks to prevent null pointer exceptions - update comments per code review requests